--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+	<nav>
+	<ul>
+		<li><%= link_to 'HOME', root_path %></li>
+		<li><%= link_to 'POST', root_path %></li>
+		<li><%= link_to 'CATE', root_path %></li>
+	</ul>
+	</nav>
+
 <%= yield %>
 
 </body>
