change root & add memu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,8 @@
 	<nav>
 	<ul>
 		<li><%= link_to 'HOME', root_path %></li>
-		<li><%= link_to 'POST', root_path %></li>
-		<li><%= link_to 'CATE', root_path %></li>
+		<li><%= link_to 'POST', posts_path %></li>
+		<li><%= link_to 'CATE', categories_path %></li>
 	</ul>
 	</nav>
 
