--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Category:</strong>
+  <%= @post.category.name %>
+</p>
+<p>
   <strong>Title:</strong>
   <%= @post.title %>
 </p>
