--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -22,8 +22,12 @@
   </div>
   <div class="field">
     <%= f.label :body %><br>
-    <%= f.text_field :body %>
+    <%= f.text_area :body %>
   </div>
+  <div>
+    <%= f.label :featured, 'Image' %><br />
+    <%= f.file_field :featured %>
+</div>
   <div class="actions">
     <%= f.submit %>
   </div>
