--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,3 +21,6 @@
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
+
+<h5>Comments</h5>
+<%= render "comments", commentable: @post %>
